<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_Ctrl_SIf_OVN_Cfg" Id="{087adcd4-9d88-4f62-8f11-c7111b108210}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_OVN_Cfg EXTENDS T_Ctrl_SIf_MOD_Cfg :
STRUCT
	/// Number of Modules in use 
	uiNumberOfModules: UINT;
	/// Length of one Module 
	diModuleLength_mm: DINT;
	/// Distance before the first Module 
	diDistanceBeforeOven_mm: DINT;
	/// Distance after the last Module 
	diDistanceAfterOven_mm: DINT;
	/// Maximal Belt Speed in mm/min 
	diMaxSpeed_mm_min: DINT;
	/// Minimal Belt Speed in mm/min 
	diMinSpeed_mm_min: DINT;
	/// Minimal Temperature in deci °C 
	diMinTemp_dc: DINT;
	/// Maximal Temperature in deci °C 
	diMaxTemp_dc: DINT;
	/// Minimal Airflow in % 
	diMinAir_p: DINT;
	/// Maximal Airflow in % 
	diMaxAir_p: DINT;
	/// Auto Continue After Connection Error
	bAutoContinueAfterConnectionError: BOOL;
	/// Enable Data Channel
	bolDataChannelEnable: BOOL;
	/// ignore waiting for Paper to eject in OFFBusy
	bIgnoreOffBusyWaitPaper: BOOL;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>