<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Oven_DCH" Id="{0c9a714c-88fd-4826-aaac-f9394c0ee232}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation' := ''}
TYPE T_Oven_DCH :
STRUCT
	rBaseInfo: T_ItemBase;
	/// Paper ID
	udiIdentification: ULINT;
	/// Recipe  process parameter
	/// --------------------------------------------------------------
	/// Oven Data
	bTrash: BOOL;
	diTimeInOven_s: DINT;
	diTemperature_mc: ARRAY[0..(MAX_NUMBER_OF_OVEN_MODULES - 1)] OF DINT;
	diAirflow_prc: ARRAY[0..(MAX_NUMBER_OF_OVEN_MODULES - 1)] OF DINT;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>